<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_horizontal"
            android:text="@string/edit_task_text"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_title_hint"
                android:inputType="text"
                android:gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTaskInfo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/edit_task_info_hint"
                android:inputType="textMultiLine"
                android:gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/buttonDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/set_due_date_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/holo_orange_dark"
            android:theme="@style/SwitchCompatTheme">
        </androidx.appcompat.widget.SwitchCompat>

        <TextView
            android:id="@+id/textViewDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/current_due_date_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/holo_orange_dark" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/buttonReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/set_reminder_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/holo_orange_dark"
            android:theme="@style/SwitchCompatTheme">
        </androidx.appcompat.widget.SwitchCompat>

        <TextView
            android:id="@+id/textViewReminderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/current_reminder_time_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/holo_orange_dark" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/buttonAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/set_alarm_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/holo_orange_dark"
            android:theme="@style/SwitchCompatTheme">
        </androidx.appcompat.widget.SwitchCompat>

        <TextView
            android:id="@+id/textViewAlarmInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/current_alarm_time_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/holo_orange_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_edit_text"
            android:textSize="16sp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_baseline_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>